# mirror-bert

./: pyproject.toml  requirements.txt  train.py
src/: mirror_bert.py
