[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abi2le_mirror_bert_colinglab"

version = "0.0.1"

requires-python = "~=3.9"

authors = [
  {name=" Fangyu Liu, Ivan Vulić, Anna Korhonen, and Nigel Collier, Cambridge Language Technology Lab"},
]
description = "Code repo for the EMNLP 2021 paper: Fast, Effective, and Self-Supervised: Transforming Masked Language Models into Universal Lexical and Sentence Encoders by Fangyu Liu, Ivan Vulić, Anna Korhonen, and Nigel Collier."

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
